fix link, maybe

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       window.enterPassword = async function() {
 	const correct = window.prompt('Enter password') === 'freedom'
     if (correct) {
-    	window.location.href = '/blog'
+    	window.location.href = 'blog'
     }
 } 
     </script>
